# online-deflecomp

./: .gitignore  CHANGES_BINGHAM.md  LICENSE  README.md  make.sh  pyproject.toml  setup-environment-ros.sh  setup-environment.sh
examples/: offline_demo.py  simulator_flexible.py
ros/: README.md  estimator_node.py  publish_robot_description.py  run_sim.sh  sim_node.py
ros/launch/: deflecomp_frames.launch  deflecomp_rviz_only.launch  single_base_link.launch
ros/lib/: dynamic_simulator.py
ros/rviz/: deflecomp.rviz
src/online_deflecomp/: __init__.py  pipeline.py
src/online_deflecomp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/online_deflecomp/controller/: command.py  equilibrium.py
src/online_deflecomp/estimator/: cmd_lag_ekf.py  ekf.py  lag_ekf.py  observations.py
src/online_deflecomp/ik/: planner.py
src/online_deflecomp/simulation/: dynamic_simulator.py
src/online_deflecomp/utils/: bingham.py  geometry.py  robot.py  urdf_utils.py  viz.py
